# proxify-cotton

./: README.md  jobs.yaml  pyproject.toml
src/: fetch_data.py  job.py  main.py  models.py
